--- a/index.html
+++ b/index.html
@@ -445,7 +445,8 @@
                                         <td align="center" style="mso-hide:all">
                                           <!-- Touch to Unveil Image  -->
                                           <label for="touchunveil"> <img class="fluid" border="0"
-                                              src="https://ninjulia.github.io/email_scratchoff/initial.png" width="100%"
+                                              src="https://ninjulia.github.io/email_scratchoff/images/initial.png"
+                                              width="100%"
                                               style="width:100%;max-width:600px; display:block; mso-hide:all; height: auto;"
                                               alt="Power Up Your Profits with ConnectWise and Labtech - Click to see if you've won">
                                           </label>
@@ -454,7 +455,8 @@
                                       <tr>
                                         <td valign="middle" align="center" bgcolor="#FFFFFF"
                                           style="color:#555555; font-family:serif; font-size:10px; mso-line-height-rule:exactly;line-height:20px; font-weight:400; padding:16px 0px 0px 0px;">
-                                          <i style="text-align:center">Click above to Reveal Your Offer</i></td>
+                                          <i style="text-align:center">Click above to Reveal Your Offer</i>
+                                        </td>
                                       </tr>
                                     </table>
                                   </td>
